# Video-Analysis

./: .gitignore  Makefile  README.md  video_analysis_pipeline.md
backend/: .gitignore  README.md  docker-compose.corpus.yml  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  analysis.py  cleanup.py  config.py  corpus.py  corpus_ingest.py  face_identity.py  jobs.py  main.py  models.py  scene.py  scene_ai_worker.py  scene_ai_worker_contracts.py  scene_packet_builder.py  scene_runtime_contracts.py  scene_task_queue.py  scene_worker_runtime.py  schemas.py  storage.py  toon.py  video_understanding.py  worker.py
backend/docs/: local-corpus-stack.md  r2-lifecycle.example.json  r2-lifecycle.md
backend/scripts/: test_r2_api.py
backend/scripts/toon_runtime/: convert_toon.mjs  package.json
backend/tests/: conftest.py  test_analysis.py  test_api.py  test_cleanup.py  test_config.py  test_corpus.py  test_corpus_ingest.py  test_face_identity.py  test_jobs.py  test_main_corpus.py  test_main_face_identity.py  test_main_result_materialization.py  test_main_scene_ai_queue.py  test_main_storage.py  test_models.py  test_person_tracking_fusion.py  test_scene.py  test_scene_ai_worker.py  test_scene_ai_worker_contracts.py  test_scene_packet_builder.py  test_scene_task_queue.py  test_schemas.py  test_storage.py  test_toon.py  test_video_understanding.py
backend/tests/integration/: conftest.py  test_analyze_frame_integration.py  test_corpus_ingest_integration.py  test_detection_integration.py  test_face_integration.py  test_no_llm_corpus_e2e_integration.py  test_output_content_e2e_integration.py  test_pipeline_integration.py  test_r2_analysis_artifacts_integration.py  test_scene_ai_queue_integration.py  test_scene_integration.py  test_scene_summary_results_integration.py  test_segmentation_integration.py  (+1 more)
(+1 files in other folders)
