[project]
name = "video-analysis-backend"
version = "0.1.0"
description = "Python FastAPI backend for video analysis (scene detection, segmentation, object detection, face recognition)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3.0",
    "facenet-pytorch",
    "scenedetect[opencv]>=0.6.0",
    "opencv-python>=4.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "apscheduler>=3.10.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
