[project]
name = "video-analysis-backend"
version = "0.1.0"
description = "Python FastAPI backend for video analysis (scene detection, segmentation, object detection, face recognition)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3.0",
    "facenet-pytorch",
    "scenedetect[opencv]>=0.6.0",
    "opencv-python>=4.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "apscheduler>=3.10.0",
    "numpy>=1.24.0",
    "pillow>=12.1.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langsmith>=0.3.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
